--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -72,8 +72,10 @@
     <Compile Include="Assets\SampleScenes\Scripts\PlaceTargetWithMouse.cs" />
     <Compile Include="Assets\SampleScenes\Scripts\SlowMoButton.cs" />
     <Compile Include="Assets\Scripts\EnemyMove.cs" />
+    <Compile Include="Assets\Scripts\SearchCharacter.cs" />
     <Compile Include="Assets\Scripts\changeCamera.cs" />
     <Compile Include="Assets\Scripts\playerMove.cs" />
+    <Compile Include="Assets\Scripts\setPosition.cs" />
     <None Include="Assets\SampleScenes\Shaders\Skybox-Procedural.shader" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>/Users/merry/Unity/biohazard/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
